--- a/primeiroProjeto/.vscode/settings.json
+++ b/primeiroProjeto/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "java.project.sourcePaths": ["src"],
+    "console": "integratedTerminal",
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
         "lib/**/*.jar"
